kubernetes-bdp/kubernetes-bdp/monit/node-exporter.yaml
---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: node-exporter
  namespace: kube-system
  labels:
    daemon: node-exporter
    grafanak8sapp: 'true'
spec:
  selector:
    matchLabels:
      daemon: node-exporter
      grafanak8sapp: 'true'
  template:
    metadata:
      name: node-exporter
      creationTimestamp: 
      labels:
        daemon: node-exporter
        grafanak8sapp: 'true'
    spec:
      volumes:
      - name: proc
        hostPath:
          path: "/proc"
          type: ''
      - name: sys
        hostPath:
          path: "/sys"
          type: ''
      containers:
      - name: node-exporter
        image: 10.16.0.144:5000/prometheus/node-exporter
        args:
        - "--path.procfs=/proc_host"
        - "--path.sysfs=/host_sys"
        ports:
        - name: node-exporter
          hostPort: 9100
          containerPort: 9100
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: sys
          readOnly: true
          mountPath: "/host_sys"
        - name: proc
          readOnly: true
          mountPath: "/proc_host"
